hotfix. Blurbs no longer fixed height. Therefore margins will not look too large for blurbs with small book covers

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -35,10 +35,11 @@ body {
 }
 
 #book_blurb {
-  margin: 0px 20px 0px 20px;
+  display: inline-block;
+
+  margin: 30px 20px 20px 30px;
 
   width: 450px;
-  height: 256px;
 
   /*
   background: #FFFFFF;
